fixing alignment issues on mobile

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -12,6 +12,7 @@
     background-position: center center;
     border-bottom: 10px solid @secondaryColor;
     margin-top: -35px;
+    padding-bottom: 200px;
 
     .arch {
       width: 100%;
